--- a/index.html
+++ b/index.html
@@ -4,25 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon: Search Engine Optimization</title>
 </head>
 
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
+                <li> <a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                <li> <a href="#online-reputation-management">Online Reputation Management</a></li>
+                <li> <a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
-        </div>
+        </nav>
     </div>
     <div class="hero"></div>
     <div class="content">
